// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider Snapshots renders default slider correctly 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-sglkbkc"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders disabled slider correctly 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          opacity-50 cursor-not-allowed
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        disabled=""
        id="slider-4hjxnfa"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-not-allowed
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders range slider correctly 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        class="sr-only"
        id="slider-ijd74e0"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="20"
      />
      <input
        aria-hidden="true"
        class="sr-only"
        max="100"
        min="0"
        step="1"
        type="range"
        value="80"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="left: 20%; width: 60%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="20"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 20%;"
          tabindex="0"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="80"
          class="
                absolute
                w-5 h-5
                rounded-full
                bg-white
                
                transform -translate-x-1/2 -translate-y-1/2
                cursor-grab active:cursor-grabbing
                
              "
          role="slider"
          style="left: 80%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with custom min, max, and value correctly 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="50"
        aria-valuemin="10"
        aria-valuenow="30"
        class="sr-only"
        id="slider-4557vkf"
        max="50"
        min="10"
        role="slider"
        step="1"
        type="range"
        value="30"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 50%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="50"
          aria-valuemin="10"
          aria-valuenow="30"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 50%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with custom thumb icon correctly 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-18mrg70"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        >
          <span
            data-testid="thumb-icon"
          >
            ●
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with custom value format correctly 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="sr-only"
        id="slider-8ruhhjd"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="50"
      />
      <div
        class="
          mb-2
        "
      >
        <div
          class="
          text-sm
          text-primary-600 dark:text-primary-500
          
        "
        >
          50%
        </div>
      </div>
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 50%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 50%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different color schemes correctly: Slider with color scheme danger 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="sr-only"
        id="slider-hawhws0"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="50"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-red-600 dark:bg-red-500
              
            "
          style="width: 50%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 50%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different color schemes correctly: Slider with color scheme info 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="sr-only"
        id="slider-qw55nab"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="50"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-blue-600 dark:bg-blue-500
              
            "
          style="width: 50%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 50%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different color schemes correctly: Slider with color scheme neutral 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="sr-only"
        id="slider-dfsgmrq"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="50"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-gray-600 dark:bg-gray-500
              
            "
          style="width: 50%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 50%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different color schemes correctly: Slider with color scheme primary 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="sr-only"
        id="slider-8pdcxt6"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="50"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 50%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 50%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different color schemes correctly: Slider with color scheme secondary 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="sr-only"
        id="slider-ilz7kdf"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="50"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-secondary-600 dark:bg-secondary-500
              
            "
          style="width: 50%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 50%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different color schemes correctly: Slider with color scheme success 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="sr-only"
        id="slider-0sb44k6"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="50"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-green-600 dark:bg-green-500
              
            "
          style="width: 50%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 50%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different color schemes correctly: Slider with color scheme warning 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="sr-only"
        id="slider-opx2dry"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="50"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-yellow-600 dark:bg-yellow-500
              
            "
          style="width: 50%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 50%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different sizes correctly: Slider with size lg 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-q9wjdch"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2.5
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-6 h-6
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different sizes correctly: Slider with size md 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-3mkpver"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different sizes correctly: Slider with size sm 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-7uugayp"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-1.5
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-4 h-4
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different sizes correctly: Slider with size xl 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-fsg2a1o"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-3
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-7 h-7
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different sizes correctly: Slider with size xs 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-5emlugr"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-1
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-3 h-3
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different thumb shapes correctly: Slider with thumb shape circle 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-5pk29s1"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different thumb shapes correctly: Slider with thumb shape diamond 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-ljz115h"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rotate-45 rounded-none
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different thumb shapes correctly: Slider with thumb shape rectangle 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-a68yfr9"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-none
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different thumb shapes correctly: Slider with thumb shape square 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-19j5s1v"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-none
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different track shapes correctly: Slider with track shape rounded 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-n8clenk"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different track shapes correctly: Slider with track shape square 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-mqc5wsp"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-none
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-none
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different variants correctly: Slider with variant filled 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-ub1ykvh"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-200 dark:bg-gray-700
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-100 bg-primary-600
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different variants correctly: Slider with variant minimal 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-jhl53b9"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-200 dark:bg-gray-800 border border-gray-300 dark:border-gray-700
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-gray-400 dark:bg-gray-600
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different variants correctly: Slider with variant outline 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-kkmua6v"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-transparent border-2 border-gray-300 dark:border-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-transparent border-2 border-primary-600 dark:border-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with different variants correctly: Slider with variant solid 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-i0bxjjb"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with error state correctly 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-errormessage="slider-bt273no-error"
        aria-invalid="true"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-bt273no"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
      <div
        class="ml-2"
        data-testid="Slider"
      >
        <span
          aria-hidden="true"
          class="text-red-500"
        >
          ✕
        </span>
      </div>
    </div>
    <div
      class="mt-1 text-sm"
    >
      <p
        aria-atomic="true"
        aria-live="assertive"
        class="text-red-600 dark:text-red-400 "
        id="slider-bt273no-error"
        role="alert"
      >
        Invalid value
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with helper text correctly 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-describedby="slider-oojt5k3-helper"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-oojt5k3"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="mt-1 text-sm"
    >
      <p
        aria-live="polite"
        class="text-gray-500 dark:text-gray-400 "
        id="slider-oojt5k3-helper"
      >
        Adjust the volume
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with highlight range correctly 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-lxb5zvn"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class=""
          data-testid="Slider"
          style="position: absolute; left: 20%; top: 0px; width: 60%; height: 100%; background-color: rgba(0, 0, 255, 0.2);"
        />
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with label correctly 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class=""
    >
      <label
        class="
            text-sm
            text-gray-700 dark:text-gray-300
            cursor-pointer
            
          "
        for="slider-i6eqel8"
      >
        Volume
      </label>
    </div>
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-i6eqel8"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with marks correctly 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-6ff6d1a"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          class="
            w-1 h-1 rounded-full
            bg-primary-600 dark:bg-primary-500
            
          "
          data-value="0"
          style="position: absolute; transform: translate(-50%, -50%); left: 0%; top: 0px;"
        >
          <div
            class="
                absolute text-sm whitespace-nowrap
                bottom-3
                text-primary-600 dark:text-primary-500
              "
          >
            Min
          </div>
        </div>
        <div
          class="
            w-1 h-1 rounded-full
            bg-gray-400 dark:bg-gray-500
            
          "
          data-value="50"
          style="position: absolute; transform: translate(-50%, -50%); left: 50%; top: 0px;"
        >
          <div
            class="
                absolute text-sm whitespace-nowrap
                bottom-3
                text-gray-600 dark:text-gray-400
              "
          >
            50%
          </div>
        </div>
        <div
          class="
            w-1 h-1 rounded-full
            bg-gray-400 dark:bg-gray-500
            
          "
          data-value="100"
          style="position: absolute; transform: translate(-50%, -50%); left: 100%; top: 0px;"
        >
          <div
            class="
                absolute text-sm whitespace-nowrap
                bottom-3
                text-gray-600 dark:text-gray-400
              "
          >
            Max
          </div>
        </div>
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with required state correctly 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class=""
    >
      <label
        class="
            text-sm
            text-gray-700 dark:text-gray-300
            cursor-pointer
            
          "
        for="slider-cy1zdzf"
      >
        Required Field
        <span
          aria-hidden="true"
          class="ml-1 text-red-500"
        >
          *
        </span>
        <span
          class="sr-only"
        >
          (Erforderlich)
        </span>
      </label>
    </div>
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-cy1zdzf"
        max="100"
        min="0"
        required=""
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with scale correctly 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-317p7vk"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          class="text-gray-600 dark:text-gray-400"
          style="position: absolute; left: 0%; top: 100%;"
        >
          <div
            class="mt-2 text-xs"
          >
            0
          </div>
        </div>
        <div
          class="text-gray-600 dark:text-gray-400"
          style="position: absolute; left: 50%; top: 100%;"
        >
          <div
            class="mt-2 text-xs"
          >
            50
          </div>
        </div>
        <div
          class="text-gray-600 dark:text-gray-400"
          style="position: absolute; left: 100%; top: 100%;"
        >
          <div
            class="mt-2 text-xs"
          >
            100
          </div>
        </div>
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with shadow correctly 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-libgf89"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            shadow-inner
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              shadow-md
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with success message correctly 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-describedby="slider-q3pwvb7-success"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-q3pwvb7"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="mt-1 text-sm"
    >
      <p
        aria-atomic="true"
        aria-live="polite"
        class="text-green-600 dark:text-green-400 "
        id="slider-q3pwvb7-success"
        role="status"
      >
        Value saved
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with transparent background correctly 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          w-full h-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-uvxm0sn"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            h-2
            w-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            bg-opacity-50 dark:bg-opacity-50
            
          "
      >
        <div
          class="
              absolute
              h-full top-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="width: 0%;"
        />
        <div
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="left: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider Snapshots renders slider with vertical orientation correctly 1`] = `
<DocumentFragment>
  <div
    class=" "
  >
    <div
      class="
          relative
          h-48 w-auto
          cursor-pointer
          
        "
    >
      <input
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="sr-only"
        id="slider-4rmpffd"
        max="100"
        min="0"
        role="slider"
        step="1"
        type="range"
        value="0"
      />
      <div
        class="
            relative
            w-2
            h-full
            rounded-full
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              absolute
              w-full left-0
              rounded-full
              bg-primary-600 dark:bg-primary-500
              
            "
          style="height: 0%;"
        />
        <div
          aria-orientation="vertical"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="
              absolute
              w-5 h-5
              rounded-full
              bg-white
              
              transform -translate-x-1/2 -translate-y-1/2
              cursor-grab active:cursor-grabbing
              
            "
          role="slider"
          style="bottom: 0%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
